nuageup-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuageup-app-deployment-v2
spec:
  selector:
    app: my-nuageup-app
    version: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
