nuageup-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuageup-app-deployment
spec:
  selector:
    app: my-nuageup-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
