rules-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nuageup-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nuageup-v1.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nuageup-app-deployment
            port:
              number: 80
  - host: nuageup-v2.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nuageup-app-deployment-v2
            port:
              number: 80
