nuageup-networkpolicy-V2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-nuageup-v2
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: my-nuageup-app
      version: v2
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.82.0/24
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.82.0/24
    ports:
    - protocol: TCP
      port: 80
